<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
    <item android:id="@+id/action_add_friend"
          android:title="@string/action_add_friend"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_list_friends"
          android:title="@string/action_list_friends"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          android:showAsAction="never" />
</menu>